; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/boot/extr_mv64x60_i2c.c_mv64x60_i2c_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/boot/extr_mv64x60_i2c.c_mv64x60_i2c_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"marvell,mv64360-i2c\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"virtual-reg\00", align 1
@ctlr_base = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mv64x60_i2c_open() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = call i8* @find_node_by_compatible(i32* null, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i8* %4, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  br label %17

8:                                                ; preds = %0
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @getprop(i8* %9, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i64* %2, i32 8)
  %11 = sext i32 %10 to i64
  %12 = icmp ne i64 %11, 8
  br i1 %12, label %13, label %14

13:                                               ; preds = %8
  br label %17

14:                                               ; preds = %8
  %15 = load i64, i64* %2, align 8
  %16 = inttoptr i64 %15 to i32*
  store i32* %16, i32** @ctlr_base, align 8
  store i32 0, i32* %1, align 4
  br label %18

17:                                               ; preds = %13, %7
  store i32 -1, i32* %1, align 4
  br label %18

18:                                               ; preds = %17, %14
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i8* @find_node_by_compatible(i32*, i8*) #1

declare dso_local i32 @getprop(i8*, i8*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
